--- a/springConverter/src/main/resources/application.properties
+++ b/springConverter/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=200MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=215MB
-spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.prefix=classpath:/public/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
